apps/base/sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    app: sample-app
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"sample-app:latest","namespace":"jiadchen-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"sample-app\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sample-app
  template:
    metadata:
      labels:
        deployment: sample-app
        app: sample-app
        version: v1
    spec:
      containers:
        - name: sample-app
          image: image-registry.openshift-image-registry.svc:5000/jiadchen-dev/sample-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
